# RAMPT

./: .dockerignore  .gitignore  .plzconfig  BUILD  CHANGELOG.md  Contribute.md  Dockerfile  Dockerfile2  Dockerfile_ms  Dockerfile_win  LICENSE.txt  Manual.md  NOTICE  README.md  config.toml  docker-compose.yaml  exported_config.toml  installer.ipynb  nul  pants.toml  pleasew  pre-commit.sh  pyproject.toml  requirements.txt  setup.ipynb  setup.py  test.py
.conda/conda-meta/: history
.github/workflows/: codeql.yml  deploy_documentation.yml  deploy_releases.yml  deployment.yml  docker-image.yml  python-app.yml  python-package-conda.yml  python_doc_test.yml  testing.yml
.taipy/: version.json
.taipy/version/: 4c65d8f7-1c7b-4553-a332-3ab72128f740.json
annotated/: gnps_log.txt
builders/please/: .plzconfig
converted/: msconv_log.txt
converted/annotated/: projectspace.sirius  sirius_log.txt
converted/processed/: mzmine_log.txt
databases/: adducts_all.csv  adducts_selection.csv  modifications_all.csv
databases/iML1515/: TableXX_metList.xlsx
dependencies/: ensure_msconvert.sh  ensure_mzmine.sh  ensure_sirius.sh  mzmine_check_install.sh
dependencies/python/: pyproject.toml
docs/: Makefile  conf.html  conf.py  genindex.html  index.html  modules.html  modules.rst  objects.inv  plz-out.gen.rst  plz-out.rst  py-modindex.html  search.html  searchindex.js  source.annotation.html  source.annotation.rst  source.conversion.html  source.feature_finding.html  source.gui.pages.analysis.rst  source.gui.pages.annotation.rst  source.gui.pages.conversion.rst  source.gui.pages.feature_finding.rst  source.gui.pages.general.rst  source.gui.pages.rst  source.gui.rst  source.helpers.html  source.helpers.rst  source.html  source.ion_exclusion.html  source.ion_exclusion.rst  source.networking.html  source.population_difference_testing.html  source.rst  source.steps.analysis.rst  source.steps.annotation.rst  source.steps.conversion.rst  source.steps.feature_finding.rst  source.steps.ion_exclusion.rst  source.steps.rst  source.tests.html  tests.html  (+1 more)
docs/_modules/: index.html
docs/_modules/tests/: test_00_helpers.html  test_01_conversion.html  test_02_feature_finding.html  test_03_gnps.html  test_03_sirius.html  test_04_ion_exclusion.html
docs/_sources/: index.rst.txt  source.feature_finding.rst.txt  source.helpers.rst.txt  source.ion_exclusion.rst.txt  source.networking.rst.txt  source.population_difference_testing.rst.txt  source.rst.txt  source.tests.rst.txt
docs/static_rst/: index.rst
docs_statics/: index.rst
docsource/: conf.py  index.rst  source.annotation.rst  source.conversion.rst  source.rst  tests.rst
docsource/_build/doctrees/: conf.doctree  environment.pickle  index.doctree  modules.doctree  source.annotation.doctree  source.conversion.doctree  source.doctree  source.feature_finding.doctree  source.helpers.doctree  source.ion_exclusion.doctree  source.networking.doctree  source.population_difference_testing.doctree  source.tests.doctree  tests.doctree
docsource/_build/html/: .buildinfo  index.html  objects.inv  (+9 more)
plugins/: BUILD
presentation/: mine2sirius.pptx  ~$mine2sirius.pptx
rampt/: __init__.py  __main__.py  installer.ipynb  installer.py  quick_scripts
rampt/gui/: helpers.py  main.css  main.py
rampt/helpers/: general.py  logging.py  openms.py
rampt/steps/: __init__.py  general.py
share/: ramp.kra
source/: 99_tryout.ipynb  __init__.py  __main__.py  test.yaml  tryout.ipynb
source/00_helpers/: general.py
source/99_testing/: test_helpers.py
source/analysis/: __init__.py  chemical_groups.py  statistics.py
source/annotation/: gnps_pipe.py  sirius_pipe.py
source/conversion/: __init__.py  msconv_pipe.py  raw_to_mzml.py
source/feature_finding/: __init__.py  mzmine_pipe.py
source/gui/: __init__.py  dumpsterfire  helpers.py  main.css  main.py
source/helpers/: __init__.py  classes.py  general.py  logging.py  openms.py  types.py
source/ion_exclusion/: ion_exclusion.ipynb  ion_exclusion.py
source/population_difference_testing/: __init__.py  annotations.py  merge_evaluate.ipynb  pathways.py  statistics.py
source/rampt/: __init__.py  __main__.py
source/steps/: __init__.py  general.py
source/testing/: __init__.py  test_conversion.py  test_helpers.py
source/tests/: __init__.py  test_01_conversion.py  test_02_feature_finding.py  test_03_gnps.py  test_03_sirius.py  test_04_ion_exclusion.py  test_conversion.py  test_feature_finding.py  test_gnps.py  test_helpers.py
src/01_conversion/: raw_to_mzml.py
statics/: pre-commit.sh
statics/SOPs/: SOP_rampt_installation.docx  SOP_rampt_operation.docx  SOP_rampt_start.docx
statics/batch_files/: sirius_default_config.txt
statics/databases/: adducts_selection.txt
statics/docs/: index.rst
statics/hooks/: hook-taipy.py  pre-commit.sh  pre-push.sh
statics/videos/: rampt_usage_simple.mkv
tests/: __init__.py  common.py  test_000_imports.py  test_00_helpers.py  test_00_installer.py  test_01_conversion.py  test_01_general.py  test_01_helpers.py  test_02_conversion.py  test_02_feature_finding.py  test_02_general.py  test_03_conversion.py  test_03_feature_finding.py  test_03_gnps.py  test_03_sirius.py  test_04_feature_finding.py  test_04_gnps.py  test_04_sirius.py  test_05_gnps.py  test_05_ion_exclusion.py  test_05_sirius.py  test_06_analysis.py  test_06_summary.py  test_07_analysis.py  test_80_config.py  test_80_scenario.py  test_90_taipy.py  test_x0_ion_exclusion.py
tests/batch_files/: Example_parameters.json  Example_parameters_nested_parallel.json  minimal.mzbatch
tests/example_files/: example_files_gnps_all_db_annotations.json  example_files_iimn_fbmn.mgf  example_files_iimn_fbmn_quant.csv  example_files_sirius.mgf  minimal_precursors.tsv  mzmine_log.txt  summary.tsv
tests/mock_files/: example_text.txt  minimal file.mzXML  minimal_file.mzML
tests/test_files/: empty_text.txt  example_text.txt  minimal file.mzXML  minimal_file.mzXML
workflow/: nextflow.nf
(+179 files in other folders)
