[project]
name = "RAMPT"
description = "Raw to annotation metabolomics pipline tool"
requires-python = "<3.13,>=3.12"
dependencies = [
    "numpy<2.0.0,>=1.26.4",
    "scipy<2.0.0,>=1.14.1",
    "tqdm<5.0.0,>=4.66.5",
    "dask<2025.0.0,>=2024.9.1",
    "argparse<2.0.0,>=1.4.0",
    "regex>=2024.9.11,<2025.0.0",
    "pandas<3.0.0,>=2.2.2",
    "statsmodels<1.0.0,>=0.14.4",
    "requests>=2.32.3,<3.0.0",
    "tee-subprocess<2.0.0,>=1.2.0",
    "pyopenms<4.0.0,>=3.2.0",
    "multipledispatch<2.0.0,>=1.0.0",
    "taipy<5.0.0,>=4.0.1",
    "ruamel-yaml>=0.18.10",
    "icecream<3.0.0,>=2.1.3",
    "lxml>=5.3.0",
    "plotly>=5.24.1",
]
authors = [
    {name = "JosuaCarl", email = "josua.carl@uni-tuebingen.de"},
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE.txt"}
keywords = ["mass", "spectrometry", "workflow", "pipeline", "gui", "sirius", "mzmine" ]
version = "2025.3.0"

# Developer dependencies
[dependency-groups]
dev = [
    "beautifulsoup4<5.0.0,>=4.12.3",
    "pytest<9.0.0,>=8.3.3",
    "pyopenms==3.2.0",
    "sphinx<8,>=7",
    "pydata-sphinx-theme<1.0.0,>=0.15.4",
    "ruff<1.0.0,>=0.8.1",
    "auto-py-to-exe>=2.45.1",
    "pip-licenses>=5.0.0",
]
notebook = [
    "jupyter<2.0.0,>=1.1.1",
    "plotly<6.0.0,>=5.24.1",
    "seaborn<1.0.0,>=0.13.2",
]


# URLs
[project.urls]
Homepage = "https://github.com/JosuaCarl/mine2sirius_pipe"
Documentation = "https://josuacarl.github.io/mine2sirius_pipe/"
Repository = "https://github.com/JosuaCarl/mine2sirius_pipe.git"
Issues = "https://github.com/JosuaCarl/mine2sirius_pipe/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"


# Define entypoint
[project.scripts]
cli-name = "rampt.gui:main"


# Build system
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# Ruff rules
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = [ "F403", "F405" ]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
line-ending = "auto"
skip-magic-trailing-comma = true


